[package]
name = "cmus-discord-rpc"
version = "0.2.0"
authors = ["POP303U <nicoanton.gering@gmail.com>"]
description = "Displays the currently playing song from cmus in Discord using Rich Presence"
keywords = ["discord", "rpc", "cmus"]
repository = "https://github.com/POP303U/cmus-discord-rpc"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
clap = "3.0"
discord-rpc-client = "0.4"
env_logger = "^0.10"
log = "^0.4"
regex = "^1.10"
